# template_rp2040

./: Cargo.toml  LICENSE  README.md
.cargo/: config.toml
src/: lib.rs  main.rs  reg.rs  time.rs
