[package]
name = "temp"
version = "0.1.0"
edition = "2021"

[dependencies]
rp-pico = "0.9"
cortex-m = "0.7.3"
cortex-m-rt = "0.7.0"
embedded-time = "0.12.0"
rp2040-boot2 = "0.2.0"
embedded-hal ="1.0.0"

# this lets you use `cargo fix`!
# [[bin]]
# name = "app"
# test = false
# bench = false

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
overflow-checks = false
panic = 'abort'
lto = true
opt-level = "z"
incremental = false
strip = true

[profile.dev]
opt-level = 0
debug = 2
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false
